--- a/refactor/src/styles/globals.scss
+++ b/refactor/src/styles/globals.scss
@@ -98,6 +98,44 @@ a {
   color: $text-muted;
 }
 
+//layout
+.layout-container {
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  .main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    gap: 1rem;
+
+    // .body-container {
+    //   display: flex;
+    //   width: 100%;
+    //   flex-direction: column;
+    //   justify-content: center;
+    //   max-width: 960px;
+    //   gap: 2rem;
+    //   margin-bottom: -2.5rem;
+  }
+}
+
+.sidebar-container {
+  position: fixed;
+  left: 2rem;
+  bottom: 3rem;
+  z-index: 1;
+}
+
+.header-container {
+  margin-right: 120px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
 
 //compontents
 .card {
