--- a/refactor/src/styles/globals.scss
+++ b/refactor/src/styles/globals.scss
@@ -111,7 +111,7 @@ a {
     align-items: center;
     min-height: 100vh;
     gap: 1rem;
-
+    margin: 0 2rem;
     // .body-container {
     //   display: flex;
     //   width: 100%;
@@ -125,9 +125,14 @@ a {
 
 .sidebar-container {
   position: fixed;
-  left: 2rem;
-  bottom: 3rem;
+  left: 120px;
+  bottom: 5rem;
   z-index: 1;
+
+
+  @media (max-width: 1440px) {
+    left: 2rem
+  }
 }
 
 .header-container {
@@ -144,7 +149,41 @@ a {
   gap: 1rem;
   padding: 2rem;
   border-radius: 2rem;
+  border: 1px solid $background-light;
   background-color: $background-light;
+  transition: all 0.3s ease; // Transition for the skew effect
+
+  &:hover {
+    backdrop-filter: blur(10px);
+    background-color: rgba(lighten($background, 0.1), 0.30);
+    // border: 1px solid $text-muted;
+    // box-shadow: $box-shadow-value;
+
+  }
+
+  &.input {
+    cursor: pointer
+  }
+
+}
+
+
+.gradient-blur {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f0f0;
+  overflow: hidden;
+  position: relative;
+  transition: background 0.1s ease-out, filter 0.1s ease-out;
+}
+
+.gradient-blur h1 {
+  font-size: 3rem;
+  color: white;
+  position: relative;
+  z-index: 1;
 }
 
 .button {
@@ -160,9 +199,14 @@ a {
   transition: background-color 200ms ease-in-out;
   padding: 1rem 2rem;
 
-  &:hover {
+  &.disabled {
+    color: $text-muted
+  }
+
+  &:not(.disabled):hover {
     cursor: pointer;
     background-color: $background;
+    // box-shadow: $box-shadow-value;
     // color: text-;
 
     .icon-button-svg {
@@ -170,12 +214,18 @@ a {
     }
   }
 
-  @extend .typography
+  @extend .typography;
+
+
+  &.outline {
+    border: 1px solid $text-muted;
+  }
 }
 
 .icon-button-svg {
   color: $text-muted;
-
+  width: 2rem;
+  height: 2rem
 }
 
 .icon-button {
@@ -374,3 +424,6 @@ a {
 
   margin: 3rem
 }
+
+
+@import "./scan";
