--- a/refactor/src/styles/_scan.scss
+++ b/refactor/src/styles/_scan.scss
@@ -1,7 +1,55 @@
+.wrapper {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    gap: 5rem;
+    align-items: center;
+    width: 100%;
+    flex-grow: 1;
+    flex-direction: column;
+
+    .second-phase {
+        justify-content: flex-start;
+    }
+}
+
 .first-row {
     display: flex;
     gap: 2rem;
+    width: 100%;
     align-items: center;
+
+    .card-input {
+        flex-grow: 1;
+        padding: 0;
+        overflow: hidden;
+
+        &:not(.second-phase) {
+            min-height: 50vh;
+        }
+
+        &.second-phase {
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .body-container {
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+            flex-grow: 1;
+            justify-content: center;
+            align-items: center;
+            min-height: 400px;
+
+            .heading-1 {
+                display: flex;
+                gap: 1rem;
+                align-items: center;
+            }
+        }
+    }
 
     @media(max-width:756px) {
         .button-label {
@@ -12,11 +60,13 @@
 }
 
 .second-row {
-    display: flex;
+    display: grid;
     gap: 2rem;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
 
     @media (max-width:756px) {
-        flex-direction: column;
+        grid-template-columns: 1fr;
     }
 
 
