--- a/refactor/src/styles/_confusionMatrix.scss
+++ b/refactor/src/styles/_confusionMatrix.scss
@@ -84,6 +84,10 @@
 
 
                 @extend .typography, .text-muted;
+
+                &:hover {
+                    background-color: $background-light;
+                }
             }
         }
     }
